--- a/github-api/src/components/List/List.css
+++ b/github-api/src/components/List/List.css
@@ -1,5 +1,10 @@
 .repo{
     list-style-type: circle;
     list-style-position: inside;
+    font-style: italic;
+    background-color: #f9f9f9;
+    
 }
+
+
 
