--- a/github-api/src/App.css
+++ b/github-api/src/App.css
@@ -6,4 +6,12 @@ body {
   align-items: center;
 }
 
+.buttons{
+  background-color: #f9f9f9;
+  border: 1px solid #f9f9f9;
+}
+
+.input_search{
+  background-color: #f9f9f9;
+}
 
