--- a/github-api/src/App.css
+++ b/github-api/src/App.css
@@ -4,6 +4,29 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative; /* İçerikleri ve arka planı yönetmek için gerekli */
+  height: 100vh;
+  margin: 0;
+  overflow: hidden;
+}
+
+body::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('https://images.unsplash.com/photo-1724748860101-589aa7ee8b29?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+  background-size: cover;
+  background-position: center;
+  filter: blur(8px); /* Bulanıklaştırma işlemi */
+  z-index: -1; /* Bu elementi içeriklerin arkasına gönderir */
+}
+
+body > * {
+  position: relative;
+  z-index: 1; /* İçerikleri bulanık arka planın üstünde tutar */
 }
 
 .buttons{
@@ -14,4 +37,6 @@ body {
 .input_search{
   background-color: #f9f9f9;
 }
+
+
 
