--- a/github-api/src/App.css
+++ b/github-api/src/App.css
@@ -30,13 +30,19 @@ body > * {
 }
 
 .buttons{
-  background-color: #f9f9f9;
   border: 1px solid #f9f9f9;
+  background-color: rgba(249, 249, 249, 0.65); 
+  padding: 10px; 
+  border-radius: 8px;
 }
 
 .input_search{
   background-color: #f9f9f9;
+  position: relative;
+  z-index: 1;
 }
 
-
-
+.search_button{
+  position: relative;
+  z-index: 1;
+}
