--- a/github-api/src/components/List/List.css
+++ b/github-api/src/components/List/List.css
@@ -7,8 +7,16 @@
     overflow-y: auto;
     border: 1px solid #ddd;
     border-radius: 5px;
-    
 }
 
-
+.transparent {
+    background-color: rgba(255, 255, 255, 0.50); 
+    padding: 10px; 
+    border-radius: 8px;
+  }
+  
+  .cart {
+    position: relative;
+    z-index: 1;
+  }
 
