--- a/github-api/src/components/List/List.css
+++ b/github-api/src/components/List/List.css
@@ -8,7 +8,6 @@
     border: 1px solid #ddd;
     border-radius: 5px;
     min-width: 500px;
-    z-index: 2;
 }
 
 .transparent {
@@ -16,6 +15,10 @@
     padding: 10px; 
     border-radius: 8px;
   }
+
+#repos{
+  z-index: 2;
+}
   
   #cart {
     position: relative;
@@ -42,6 +45,12 @@
     #repos{
         min-width: 30px;
         min-height: 30px;
+    }
+
+    #repos > * {
+      position: relative;
+      z-index: 2;
+      opacity: 1;
     }
 
     #icon{
@@ -71,6 +80,12 @@
       z-index: 2;
       opacity: 1;
       overflow-y: auto;
+    }
+
+    #content > * {
+      position: relative;
+      z-index: 2;
+      opacity: 1;
     }
 
 
