--- a/github-api/src/components/List/List.css
+++ b/github-api/src/components/List/List.css
@@ -20,7 +20,7 @@
   }
 
   #content{
-    min-width: 600px;
+    min-width: 60rem;
     max-width: 65rem;
   }
 
@@ -74,7 +74,7 @@
     #repos{
         min-width: 500px;
         min-height: 150px;
-        max-height: 700px;
+        max-height: 600px;
     }
 
 
