--- a/github-api/src/components/List/List.css
+++ b/github-api/src/components/List/List.css
@@ -2,10 +2,10 @@
     font-style: italic;
     background-color: #f9f9f9;
     max-height: 300px;
-    overflow-y: auto;
     border: 1px solid #ddd;
     border-radius: 5px;
     min-width: 500px;
+    max-height: 200px;
 }
 
 
@@ -39,7 +39,7 @@
 
     #repos{
         min-width: 30px;
-        min-height: 30px;
+        min-height: 50px;
     }
 
 
@@ -63,6 +63,8 @@
       max-height: 30rem;
       overflow-y: auto;
     }
+
+    
 }
 
 @media (min-width: 768px) and (max-width: 1023px) {
