--- a/github-api/src/components/List/List.css
+++ b/github-api/src/components/List/List.css
@@ -28,6 +28,8 @@
     justify-content: space-between;
   }
 
+  
+
 
 
 @media (max-width: 767px) {
@@ -39,7 +41,9 @@
 
     #repos{
         min-width: 30px;
-        min-height: 50px;
+        min-height: 10px;
+        overflow: hidden;
+        word-break: break-word;
     }
 
 
@@ -62,6 +66,17 @@
       max-width: 19rem;
       max-height: 30rem;
       overflow-y: auto;
+    }
+
+    #prevnext{
+      display: flex;
+      flex-direction: column;
+
+    }
+
+    #page{
+      margin-top: 1rem;
+      margin-bottom: 1rem;
     }
 
     
