--- a/github-api/src/components/List/List.css
+++ b/github-api/src/components/List/List.css
@@ -42,6 +42,7 @@
     #repos{
         min-width: 30px;
         min-height: 10px;
+        max-height: 280px;
         overflow: hidden;
         word-break: break-word;
     }
